Ajout du modèle pour le déploiement

--- a/diabetes.ipynb
+++ b/diabetes.ipynb
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "5e4c91f2",
    "metadata": {},
    "outputs": [
@@ -849,10 +849,11 @@
     }
    ],
    "source": [
-    "# Sauvegarder le modèle et le scaler\n",
-    "joblib.dump(model, 'model.pkl')\n",
-    "joblib.dump(scaler, 'scaler.pkl')\n",
-    "print(\"Modèle et scaler sauvegardés sous model.pkl et scaler.pkl\")"
+    "import joblib\n",
+    "\n",
+    "# Charger le modèle et le scaler\n",
+    "model = joblib.load('model.pkl')\n",
+    "scaler = joblib.load('scaler.pkl')\n"
    ]
   },
   {
